# kestrel_engine

./: .gitignore  Cargo.toml  KESTREL_ENGINE_ROADMAP.md  README.md  rustfmt.toml  temp.ps1
.github/workflows/: animation-bench.yml  engine-no-editor.yml
artifacts/: animation_targets_report.json
artifacts/scene_captures/: animation_showcase_capture.json  skeletal_showcase_capture.json
assets/animations/clips/: slime_idle.json
assets/animations/graphs/: slime_idle_graph.json
assets/environments/: README.md
assets/images/: atlas.json  slime_idle_atlas.json
assets/models/: demo_triangle.gltf
assets/prefabs/: aliases.json  gamekit_enemy_dash.json  gamekit_enemy_heavy.json  gamekit_enemy_light.json  gamekit_player.json
assets/scenes/: animation_showcase.json  blank.json  gamekit_sample_scene.json  quick_save.json  script_behaviour_demo.json  skeletal_showcase.json
assets/scripts/: blinker.rhai  common.rhai  gamekit.rhai  gamekit_enemy_dash_behaviour.rhai  gamekit_enemy_heavy_behaviour.rhai  gamekit_enemy_light_behaviour.rhai  gamekit_player_behaviour.rhai  gamekit_sample.rhai  main.rhai  safe_handles_demo.rhai  seeker.rhai  spinner.rhai  wanderer.rhai
assets/shaders/: mesh_basic.wgsl  mesh_shadow.wgsl  sprite_batch.wgsl
config/: app.json  input.json  plugins.json  recent_projects.json
docs/: ANIMATION_IMPLEMENTATION_PLAN.md  ANIMATION_ROADMAP_FEEDBACK.md  ANIMATION_SYSTEM_ROADMAP.md  ARCHITECTURE.md  CODE_STYLE.md  DECISIONS.md  FINAL_REMAINING_ROADMAP.md  ISSUE_BACKLOG.md  ISSUE_TAGGING_GUIDE.md  MILESTONE_STATUS.md  PLUGINS.md  SCRIPT_BEHAVIOURS_V1.md  SCRIPT_SYSTEM_COMPLEX_GAME_PLAN.md  SPRITE_ANIMATION_PERF_PLAN.md  STUDIO_ROADMAP.md  Sprite_Benchmark_Plan.md  animation_asset_validation_plan.md  animation_milestone_5_plan.md  animation_sample_content.md  animation_workflows.md  arena_roguelite_guide.md  arena_roguelite_implementation_plan.md  arena_script_stability_plan.md  editor_shell_plan.md  gamekit_quickstart.md  keyframe_editor_spec.md  perf_arch_plan.md  polish_targets.md  remediation_plan.md  skeletal_importer_plan.md
docs/completed/: animation_asset_validation_plan.md  editor_shell_plan.md  polish_targets.md  remediation_plan.md  skeletal_importer_plan.md
docs/plugins/: asset_readbacks.md  atlas_meta_schema.json
fixtures/animation_clips/: README.md  slime_bob.json
fixtures/aseprite/: README.md  make_slime_png.py  noisy_uniform.json  slime_idle.json  slime_idle_events.json
fixtures/gltf/skeletons/: slime_rig.gltf
kestrel_studio/: Cargo.toml
kestrel_studio/src/: gizmo.rs  lib.rs  main.rs  mesh_preview.rs  project.rs
kestrel_studio/src/app/: animation_keyframe_panel.rs  animation_reload.rs  animation_reload_tooling.rs  animation_tooling.rs  animation_watch.rs  asset_watch_tooling.rs  camera_tooling.rs  editor_shell.rs  editor_ui.rs  gizmo_interaction.rs  inspector_tooling.rs  mesh_preview_tooling.rs  mesh_watch.rs  mod.rs  plugin_host.rs  runtime_loop.rs  script_console.rs  telemetry_tooling.rs
kestrel_studio/src/app/editor_ui/: entity_inspector.rs
perf/: before_phase0.json  before_phase0.txt  editor_all_panels.txt  plugin_panic_manifest.json
plugins/example_dynamic/: Cargo.toml
plugins/example_dynamic/src/: lib.rs
projects/kestrel_lab/: README.md  project.kestrelproj
projects/kestrel_lab/config/: app.json  input.json  plugins.json
projects/kestrel_open_world_lab/: README.md  project.kestrelproj
projects/kestrel_open_world_lab/config/: app.json  input.json  plugins.json
scripts/: build_plugins.ps1  capture_animation_samples.py  capture_sprite_perf.py  run_perf_suite.py  sprite_bench.py
scripts/ci/: check_engine_no_editor.ps1  run_animation_bench.ps1  run_animation_targets.ps1  run_gpu_baseline.ps1
src/: alloc_profiler.rs  analytics.rs  animation_validation.rs  assets.rs  audio.rs  camera.rs  camera3d.rs  cli.rs  config.rs  ecs.rs  environment.rs  events.rs  gizmo.rs  gpu_baseline.rs  input.rs  lib.rs  main.rs  material_registry.rs  mesh.rs  mesh_preview.rs  mesh_registry.rs  plugin_rpc.rs  plugins.rs  prefab.rs  renderer.rs  runtime_host.rs  scene.rs  scene_capture.rs  script_harness.rs  scripts.rs  sprite_perf_guard.rs  time.rs
src/app/: animation_keyframe_panel.rs  animation_reload.rs  animation_tooling.rs  animation_watch.rs  asset_watch_tooling.rs  atlas_watch.rs  editor_shell.rs  editor_ui.rs  gizmo_interaction.rs  inspector_tooling.rs  mesh_preview_tooling.rs  mesh_reload.rs  mod.rs  plugin_host.rs  plugin_runtime.rs  prefab_tooling.rs  runtime_loop.rs  script_console.rs  telemetry_tooling.rs
src/app/editor_ui/: entity_inspector.rs
src/assets/: skeletal.rs
src/ecs/: physics.rs  profiler.rs  systems.rs  transform.rs  types.rs  world.rs
src/ecs/systems/: animation.rs  mod.rs  particles.rs  physics.rs  picking.rs
src/renderer/: egui_pass.rs  light_clusters.rs  mesh_pass.rs  shadow_pass.rs  sprite_pass.rs  window_surface.rs
tests/: animation_bench.rs  animation_clip.rs  animation_profile.rs  animation_showcase_scene.rs  animation_targets.rs  aseprite_import.rs  binary_scene.rs  camera_metadata.rs  input_bindings.rs  particle_budget.rs  particle_forces.rs  physics_determinism.rs  picking.rs  plugins.rs  prefab_workflow.rs  renderer_environment.rs  scene_roundtrip.rs  script_behaviours.rs  script_compile.rs  script_harness.rs  skeletal_import.rs  spatial_index.rs  sprite_animation.rs  sprite_perf_guard.rs  transform_clips.rs
tests/fixtures/: sprite_perf_fail.json  sprite_perf_pass.json
tests/fixtures/script_harness/: counter.golden.json  counter.json  counter.rhai  deterministic_queries.golden.json  deterministic_queries.json  deterministic_queries.rhai  entity_commands.golden.json  entity_commands.json  entity_commands.rhai  event_bus.golden.json  event_bus.json  event_bus.rhai  gamekit_dash.golden.json  gamekit_dash.json  gamekit_dash.rhai  gamekit_wave.golden.json  gamekit_wave.json  gamekit_wave.rhai  idle.rhai  spawn_commands.golden.json  spawn_commands.json  spawn_commands.rhai
(+11 files in other folders)
