[package]
name = "kestrel_engine"
version = "0.7.0"
edition = "2021"
default-run = "kestrel_engine"

[features]
default = []
binary_scene = ["bincode", "lz4_flex"]
anim_stats = []

[dependencies]
winit = { version = "0.30.12", features = ["rwh_06"] }
wgpu = "27.0.1"
pollster = "0.3"
glam = "0.27"
bevy_ecs = "0.15"
bytemuck = { version = "1.15", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "hdr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libloading = "0.8"
rand = "0.8"
egui = "0.33"
egui-winit = "0.33"
egui-wgpu = { version = "0.33", features = ["winit"] }
egui_plot = "0.34"
rhai = { version = "1.17", default-features = false, features = ["std"] }
rapier2d = "0.26"
rodio = "0.17"
smallvec = "1.13"
gltf = "1.4"
half = "2.4"
uuid = { version = "1.8", features = ["v4"] }
cpal = "0.15"
bincode = { version = "1.3", optional = true }
lz4_flex = { version = "0.11", optional = true }
notify = "6.1"

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
incremental = false
