[package]
name = "kestrel_studio"
version = "0.7.0"
edition = "2021"

[features]
default = []
binary_scene = ["kestrel_engine/binary_scene", "lz4_flex"]
anim_stats = ["kestrel_engine/anim_stats"]
sprite_anim_soa = ["kestrel_engine/sprite_anim_soa"]
sprite_anim_fixed_point = ["sprite_anim_soa", "kestrel_engine/sprite_anim_fixed_point"]
sprite_anim_simd = ["sprite_anim_fixed_point", "kestrel_engine/sprite_anim_simd"]
alloc_profiler = ["kestrel_engine/alloc_profiler"]

[dependencies]
kestrel_engine = { path = ".." }
winit = { version = "0.30.12", features = ["rwh_06"] }
wgpu = "27.0.1"
pollster = "0.3"
glam = "0.27"
bevy_ecs = "0.15"
bytemuck = { version = "1.15", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "hdr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
libloading = "0.8"
rand = "0.8"
egui = "0.33"
egui-winit = "0.33"
egui-wgpu = { version = "0.33", features = ["winit"] }
egui_plot = "0.34"
rhai = { version = "1.17", default-features = false, features = ["std"] }
rapier2d = "0.26"
rodio = "0.17"
smallvec = "1.13"
gltf = "1.4"
half = "2.4"
uuid = { version = "1.8", features = ["v4"] }
cpal = "0.15"
bincode = "1.3"
lz4_flex = { version = "0.11", optional = true }
notify = "6.1"
bitflags = "2.4"
wide = "0.7"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.10"
